# launch-reachymini-sim

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pipecat  README.md  install.sh
.github/workflows/: build-image.yml
bot/: main.py  pyproject.toml  server.py
bot/services/: __init__.py  processor.py  reachy_service.py  speech_tapper.py  wobbler.py
config/: Caddyfile  Caddyfile.pipecat  jupyter_config.py  openbox-rc.xml  supervisord-pipecat.conf  supervisord.conf
nat/src/ces_tutorial/: openai_chat_request.py  register.py
nat/src/ces_tutorial/functions/: router_agent.py
scripts/: conversation-app-wrapper.py  entrypoint-pipecat.sh  entrypoint.sh  patch-websocket.sh  setup_env.sh  start_pipecat.sh  start_reachy.sh
