[project]
name = "reachy-pipecat-bot"
version = "0.1.0"
description = "Pipecat bot for Reachy Mini with NeMo Agent Toolkit"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "onnxruntime>=1.23.2",
    "pipecat-ai-small-webrtc-prebuilt>=2.0.0",
    "pipecat-ai[daily,local-smart-turn-v3]>=0.0.98",
    "reachy-mini>=1.2.4",
    "reachy-mini-dances-library>=0.2.1",
    "transformers>=4.57.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "loguru>=0.7.0",
    "Pillow>=10.0.0",
]

